--- a/fastapi/.env.example
+++ b/fastapi/.env.example
@@ -1,3 +1,12 @@
+# ===== APP =====
+APP_NAME=otiva
+APP_VERSION=1
+DEBUG=False
+
+UVICORN_APP_NAME=main:app
+UVICORN_HOST=127.0.0.1
+UVICORN_PORT=8000
+UVICORN_RELOAD=True
 # ===== POSTGRES =====
 DATABASE_USER=user
 DATABASE_PASSWORD=password
