nginx conf refactored

--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -1,17 +1,17 @@
-server {
-  listen 80;
-  server_name uvuv643.ru;
-
-  location / {
-      proxy_pass http://app_vue:80;
-  }
-}
+# server {
+#   listen 80;
+#   server_name uvuv643.ru;
+#
+#   location / {
+#       proxy_pass http://otiva_react:80;
+#   }
+# }
 
 server {
   listen 80;
   server_name api.uvuv643.ru;
 
   location / {
-      proxy_pass http://app_fastapi:8000;
+      proxy_pass http://otiva_fastapi:8000;
   }
 }
