--- a/fastapi/.env.example
+++ b/fastapi/.env.example
@@ -8,8 +8,8 @@ UVICORN_HOST=127.0.0.1
 UVICORN_PORT=8000
 UVICORN_RELOAD=True
 # ===== POSTGRES =====
-DATABASE_USER=user
-DATABASE_PASSWORD=password
-DATABASE_HOST=host
-DATABASE_PORT=port
-DATABASE_NAME=name
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_HOST=host
+POSTGRES_PORT=port
+POSTGRES_NAME=name
