--- a/.github/workflows/deploy_on_push.yaml
+++ b/.github/workflows/deploy_on_push.yaml
@@ -19,4 +19,7 @@ jobs:
           private_key: ${{secrets.SSH_PRIVATE_KEY}}
           command: |
             cd ${{ secrets.PROJECT_FOLDER }};
-            echo heheheha;
+            git pull;
+            docker compose build;
+            docker compose down;
+            docker compose up -d;
