--- a/fastapi/.env.example
+++ b/fastapi/.env.example
@@ -15,3 +15,7 @@ POSTGRES_HOST=host
 POSTGRES_PORT=port
 POSTGRES_NAME=name
 POSTGRES_ECHO=False
+
+# ===== JWT =====
+JWT_SECRET_KEY=
+JWT_ALGORITHM=
