--- a/.github/workflows/deploy_on_push.yaml
+++ b/.github/workflows/deploy_on_push.yaml
@@ -23,4 +23,4 @@ jobs:
             docker compose build;
             docker compose down;
             docker compose up -d;
-            docker exec otiva_fastapi alembic migrate head
+            docker exec otiva_fastapi alembic upgrade head
