--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -11,6 +11,10 @@ server {
   listen 80;
   server_name api.uvuv643.ru;
 
+    if ($request_method = 'OPTIONS') {
+        return 204;
+    }
+
   location / {
       proxy_pass http://otiva_fastapi:8000;
       proxy_set_header Host $host;
