--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -11,6 +11,16 @@ server {
   listen 80;
   server_name api.uvuv643.ru;
 
+    set $cors_origin $http_origin;
+    set $cors_cred   true;
+    set $cors_header $http_access_control_request_headers;
+    set $cors_method $http_access_control_request_method;
+
+    add_header Access-Control-Allow-Origin      $http_origin always;
+    add_header Access-Control-Allow-Credentials $cors_cred always;
+    add_header Access-Control-Allow-Headers     $cors_header always;
+    add_header Access-Control-Allow-Methods     $cors_method always;
+
     if ($request_method = 'OPTIONS') {
         return 204;
     }
