--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -25,6 +25,10 @@ server {
         return 204;
     }
 
+location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
   location / {
       proxy_pass http://otiva_fastapi:8000;
       proxy_set_header Host $host;
