--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
+      - ./certbot/www:/var/www/certbot/
       - ./nginx/conf.d/:/etc/nginx/conf.d/
     networks:
       - otiva
