added https nginx

--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -11,6 +11,24 @@ server {
   listen 80;
   server_name api.uvuv643.ru;
 
+  location /.well-known/acme-challenge/ {
+    root /var/www/certbot;
+  }
+ 
+  location / {
+    return 301 https://$host$request_uri;
+  }
+
+}
+
+server {
+  listen 443 ssl;
+
+  ssl_certificate /etc/letsencrypt/live/otiva/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/otiva/privkey.pem; # managed by Certbot
+
+  server_name api.uvuv643.ru;
+
     set $cors_origin $http_origin;
     set $cors_cred   true;
     set $cors_header $http_access_control_request_headers;
@@ -23,10 +41,6 @@ server {
 
     if ($request_method = 'OPTIONS') {
         return 204;
-    }
-
-location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
     }
 
   location / {
