--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - "443:443"
     volumes:
       - ./certbot/www:/var/www/certbot/
+      - ./certbot/conf:/etc/letsencrypt/
       - ./nginx/conf.d/:/etc/nginx/conf.d/
     networks:
       - otiva
