--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -34,7 +34,7 @@ server {
     set $cors_header $http_access_control_request_headers;
     set $cors_method $http_access_control_request_method;
 
-    add_header Access-Control-Allow-Origin      $http_origin always;
+    add_header Access-Control-Allow-Origin      * always;
     add_header Access-Control-Allow-Credentials $cors_cred always;
     add_header Access-Control-Allow-Headers     $cors_header always;
     add_header Access-Control-Allow-Methods     $cors_method always;
