--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -34,10 +34,15 @@ server {
     set $cors_header $http_access_control_request_headers;
     set $cors_method $http_access_control_request_method;
 
-    add_header Access-Control-Allow-Origin      * always;
-    add_header Access-Control-Allow-Credentials $cors_cred always;
-    add_header Access-Control-Allow-Headers     $cors_header always;
-    add_header Access-Control-Allow-Methods     $cors_method always;
+    add_header 'Access-Control-Allow-Origin' '*' always;
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+    add_header 'Access-Control-Allow-Headers' 'Content-Type, Content-Length,Accept-Encoding,X-CSRF-Token,Authorization,accept,origin,Cache-Control,X-Requested-With' always;
+    add_header 'Control-Allow-Credentials', 'true'' always;
+
+#    add_header Access-Control-Allow-Origin      * always;
+#    add_header Access-Control-Allow-Credentials $cors_cred always;
+#    add_header Access-Control-Allow-Headers     $cors_header always;
+#    add_header Access-Control-Allow-Methods     $cors_method always;
 
     if ($request_method = 'OPTIONS') {
         return 204;
