--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -36,7 +36,7 @@ server {
 
     add_header 'Access-Control-Allow-Origin' '*' always;
     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-    add_header 'Access-Control-Allow-Headers' 'Content-Type, Content-Length,Accept-Encoding,X-CSRF-Token,Authorization,accept,origin,Cache-Control,X-Requested-With' always;
+    add_header 'Access-Control-Allow-Headers' $cors_header always;
     add_header 'Control-Allow-Credentials', 'true'' always;
 
 #    add_header Access-Control-Allow-Origin      * always;
