--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -37,7 +37,7 @@ server {
     add_header 'Access-Control-Allow-Origin' '*' always;
     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
     add_header 'Access-Control-Allow-Headers' $cors_header always;
-    add_header 'Control-Allow-Credentials', 'true'' always;
+    add_header 'Control-Allow-Credentials' 'true' always;
 
 #    add_header Access-Control-Allow-Origin      * always;
 #    add_header Access-Control-Allow-Credentials $cors_cred always;
