--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,14 +28,14 @@ services:
     networks:
       - otiva
 
-#  react:
-#    container_name: otiva_react
-#    restart: unless-stopped
-#    build:
-#      context: ./react
-#      dockerfile: Dockerfile
-#    networks:
-#      - otiva
+  react:
+    container_name: otiva_react
+    restart: unless-stopped
+    build:
+      context: ./react
+      dockerfile: Dockerfile
+    networks:
+      - otiva
 
   postgres:
     container_name: otiva_postgres
@@ -56,7 +56,7 @@ services:
     volumes:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
-    command: certonly --webroot -w /var/www/certbot/ --email uvuv.space@gmail.com -d api.uvuv643.ru --agree-tos --cert-name otiva
+    command: certonly --webroot -w /var/www/certbot/ --email uvuv.space@gmail.com -d api.uvuv643.ru -d uvuv643.ru --agree-tos --cert-name otiva
 
 networks:
   otiva:
