--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -1,12 +1,30 @@
-# server {
-#   listen 80;
-#   server_name uvuv643.ru;
-#
-#   location / {
-#       proxy_pass http://otiva_react:80;
-#   }
-# }
-#
+server {
+  listen 80;
+  server_name uvuv643.ru;
+
+  location /.well-known/acme-challenge/ {
+    root /var/www/certbot;
+  }
+
+  location / {
+    return 301 https://$host$request_uri;
+  }
+}
+
+server {
+  listen 443;
+  server_name uvuv643.ru;
+
+#   ssl_certificate /etc/letsencrypt/live/otiva/fullchain.pem; # managed by Certbot
+#   ssl_certificate_key /etc/letsencrypt/live/otiva/privkey.pem; # managed by Certbot
+
+  server_name api.uvuv643.ru;
+
+  location / {
+      proxy_pass http://otiva_react:80;
+  }
+}
+
 server {
   listen 80;
   server_name api.uvuv643.ru;
@@ -18,35 +36,39 @@ server {
   location / {
     return 301 https://$host$request_uri;
   }
-
 }
 
 server {
   listen 443 ssl;
+  server_name api.uvuv643.ru;
 
   ssl_certificate /etc/letsencrypt/live/otiva/fullchain.pem; # managed by Certbot
   ssl_certificate_key /etc/letsencrypt/live/otiva/privkey.pem; # managed by Certbot
 
   server_name api.uvuv643.ru;
 
-    set $cors_origin $http_origin;
-    set $cors_cred   true;
-    set $cors_header $http_access_control_request_headers;
-    set $cors_method $http_access_control_request_method;
+  charset utf-8;
 
-    add_header 'Access-Control-Allow-Origin' '*' always;
-    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-    add_header 'Access-Control-Allow-Headers' $cors_header always;
-    add_header 'Control-Allow-Credentials' 'true' always;
+  set $cors_origin "";
+  set $cors_cred   "";
+  set $cors_header "";
+  set $cors_method "";
 
-#    add_header Access-Control-Allow-Origin      * always;
-#    add_header Access-Control-Allow-Credentials $cors_cred always;
-#    add_header Access-Control-Allow-Headers     $cors_header always;
-#    add_header Access-Control-Allow-Methods     $cors_method always;
+  if ($http_origin ~* "^http.*\.uvuv643\.ru") {
+      set $cors_origin $http_origin;
+      set $cors_cred   true;
+      set $cors_header $http_access_control_request_headers;
+      set $cors_method $http_access_control_request_method;
+  }
 
-    if ($request_method = 'OPTIONS') {
-        return 204;
-    }
+  add_header Access-Control-Allow-Origin      $http_origin always;
+  add_header Access-Control-Allow-Credentials $cors_cred always;
+  add_header Access-Control-Allow-Headers     $cors_header always;
+  add_header Access-Control-Allow-Methods     $cors_method always;
+
+  if ($request_method = 'OPTIONS') {
+      return 204;
+  }
 
   location / {
       proxy_pass http://otiva_fastapi:8000;
