--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -15,8 +15,8 @@ server {
   listen 443;
   server_name uvuv643.ru;
 
-#   ssl_certificate /etc/letsencrypt/live/otiva/fullchain.pem; # managed by Certbot
-#   ssl_certificate_key /etc/letsencrypt/live/otiva/privkey.pem; # managed by Certbot
+  ssl_certificate /etc/letsencrypt/live/otiva/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/otiva/privkey.pem; # managed by Certbot
 
   server_name api.uvuv643.ru;
 
