--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -12,7 +12,7 @@ server {
 }
 
 server {
-  listen 443;
+  listen 443 ssl;
   server_name uvuv643.ru;
 
   ssl_certificate /etc/letsencrypt/live/otiva/fullchain.pem; # managed by Certbot
