--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -50,7 +50,7 @@ server {
   set $cors_header "";
   set $cors_method "";
 
-  if ($http_origin ~* "^https.*\.uvuv643\.ru") {
+  if ($http_origin ~* "^https.*\.uvuv643\.ru$") {
       set $cors_origin $http_origin;
       set $cors_cred   true;
       set $cors_header $http_access_control_request_headers;
