--- a/react/package.json
+++ b/react/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.80",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@vis.gl/react-google-maps": "^0.7.1",
     "antd": "^5.15.0",
     "axios": "^1.6.7",
     "google-map-react": "^2.1.10",
