testing seeding on pushh main

--- a/.github/workflows/deploy_on_push.yaml
+++ b/.github/workflows/deploy_on_push.yaml
@@ -23,4 +23,5 @@ jobs:
             docker compose build;
             docker compose down;
             docker compose up -d;
-            docker exec otiva_fastapi alembic upgrade head
+            docker exec otiva_fastapi alembic upgrade head;
+            docker exec otiva_fastapi 'export PYTHONPATH=$PYTHONPATH:`pwd` ; python ./src/database/seeders/database_seeder.py'  
