--- a/fastapi/.env.example
+++ b/fastapi/.env.example
@@ -19,3 +19,7 @@ POSTGRES_ECHO=False
 # ===== JWT =====
 JWT_SECRET_KEY=
 JWT_ALGORITHM=
+
+# ===== REDIS =====
+REDIS_HOST=otiva_redis
+REDIS_PASSWORD=foobared
