--- a/fastapi/.env.example
+++ b/fastapi/.env.example
@@ -1,13 +1,11 @@
 # ===== APP =====
 APP_NAME=otiva
-<<<<<<< Updated upstream
-=======
 APP_PATH=/app
 APP_URL=https://domain.com
->>>>>>> Stashed changes
 APP_VERSION=1
 DEBUG=False
 
+# ===== UVICORN =====
 UVICORN_APP_NAME=main:app
 UVICORN_HOST=127.0.0.1
 UVICORN_PORT=8000
