--- a/react/package.json
+++ b/react/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-websocket": "^2.1.0",
+    "redux-persist": "^6.0.0",
     "sass": "^1.71.1",
     "typescript": "^4.9.5",
     "use-deep-compare-effect": "^1.8.1",
