--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name uvuv643.ru;
+  server_name otiva.space;
 
   location /.well-known/acme-challenge/ {
     root /var/www/certbot;
@@ -12,11 +12,11 @@ server {
 }
 
 server {
-  listen 443 ssl;
-  server_name uvuv643.ru;
+  listen 443 ;
+  server_name otiva.space;
 
-  ssl_certificate /etc/letsencrypt/live/otiva/fullchain.pem; # managed by Certbot
-  ssl_certificate_key /etc/letsencrypt/live/otiva/privkey.pem; # managed by Certbot
+#   ssl_certificate /etc/letsencrypt/live/otiva/fullchain.pem; # managed by Certbot
+#   ssl_certificate_key /etc/letsencrypt/live/otiva/privkey.pem; # managed by Certbot
 
   location / {
       proxy_pass http://otiva_react:80;
@@ -25,7 +25,7 @@ server {
 
 server {
   listen 80;
-  server_name api.uvuv643.ru;
+  server_name api.otiva.space;
 
   location /.well-known/acme-challenge/ {
     root /var/www/certbot;
@@ -37,11 +37,11 @@ server {
 }
 
 server {
-  listen 443 ssl;
-  server_name api.uvuv643.ru;
+  listen 443;
+  server_name api.otiva.space;
 
-  ssl_certificate /etc/letsencrypt/live/otiva/fullchain.pem; # managed by Certbot
-  ssl_certificate_key /etc/letsencrypt/live/otiva/privkey.pem; # managed by Certbot
+#   ssl_certificate /etc/letsencrypt/live/otiva/fullchain.pem; # managed by Certbot
+#   ssl_certificate_key /etc/letsencrypt/live/otiva/privkey.pem; # managed by Certbot
 
   charset utf-8;
 
@@ -51,7 +51,7 @@ server {
   set $cors_method "";
 
 #   if ($http_origin ~* "^http.*\.uvuv643\.ru$") {
-  if ($http_origin = "https://uvuv643.ru") {
+  if ($http_origin = "https://otiva.space") {
       set $cors_origin $http_origin;
       set $cors_cred   true;
       set $cors_header $http_access_control_request_headers;
