--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -12,11 +12,11 @@ server {
 }
 
 server {
-  listen 443 ;
+  listen 443 ssl;
   server_name otiva.space;
 
-#   ssl_certificate /etc/letsencrypt/live/otiva/fullchain.pem; # managed by Certbot
-#   ssl_certificate_key /etc/letsencrypt/live/otiva/privkey.pem; # managed by Certbot
+  ssl_certificate /etc/letsencrypt/live/otiva/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/otiva/privkey.pem; # managed by Certbot
 
   location / {
       proxy_pass http://otiva_react:80;
@@ -37,11 +37,11 @@ server {
 }
 
 server {
-  listen 443;
+  listen 443 ssl;
   server_name api.otiva.space;
 
-#   ssl_certificate /etc/letsencrypt/live/otiva/fullchain.pem; # managed by Certbot
-#   ssl_certificate_key /etc/letsencrypt/live/otiva/privkey.pem; # managed by Certbot
+  ssl_certificate /etc/letsencrypt/live/otiva/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/otiva/privkey.pem; # managed by Certbot
 
   charset utf-8;
 
